--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,10 @@
 RewriteEngine On
+
 RewriteBase /tpe-web2-entrega3
+
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^(.*)$ index.php?action=$1 [QSA,L]
+
+RewriteRule ^(.*)$ index.php?resource=$1 [QSA,L]
